# bilark

./: README.md  pyproject.toml
bilark/: __init__.py  __main__.py  channel.py  cli.py  errors.py  reporter.py  video.py  viewer.py
bilark/templates/: base.html  channel.html  index.html  video.html
